--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <img class="content__hello-img" src="assets/img/avatar.png" alt="Avatar">
                 <div class="content__hello-text">
                     <span class="content__name">
-                        <a href="/"> Hey, I'm Sviatoslav.</a>
+                        <a href="/"> Hello, I'm Sergei.</a>
                     </span>
-                    <span class="content__description">This is my template <br/> for simple and beauty portfolio</span>
+                    <span class="content__description">This is my portfolio <br/> with my data projects</span>
                     <nav class="content__social">
                         <a href="#link" target="_blank" class="content__social-item">
                             <img src="assets/img/icons/twitter.svg" alt="Twitter">
