--- a/index.html
+++ b/index.html
@@ -23,16 +23,8 @@
                     <span class="content__name">
                         <a href="/"> Hello, I'm Sergei.</a>
                     </span>
-                    <span class="content__description">This is my portfolio <br/> with my data projects</span>
+                    <span class="content__description">This is my portfolio <br/> with my data related projects</span>
                     <nav class="content__social">
-                        <a href="#link" target="_blank" class="content__social-item">
-                            <img src="assets/img/icons/twitter.svg" alt="Twitter">
-                            <span>Twitter</span>
-                        </a>
-                        <a href="#link" target="_blank" class="content__social-item">
-                            <img src="assets/img/icons/facebook.svg" alt="Facebook">
-                            <span>Facebook</span>
-                        </a>
                         <a href="#link" target="_blank" class="content__social-item">
                             <img src="assets/img/icons/in.svg" alt="LinkedIn">
                             <span>LinkedIn</span>
