--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
                     </span>
                     <span class="content__description">This is my portfolio <br/> with my data related projects</span>
                     <nav class="content__social">
-                        <a href="#link" target="_blank" class="content__social-item">
+                        </a>
+                        <a href="https://t.me/loki_the_trixter" target="_blank" class="content__social-item">
                             <img src="assets/img/icons/in.svg" alt="LinkedIn">
                             <span>LinkedIn</span>
                         </a>
-                        <a href="#link" target="_blank" class="content__social-item">
+                        <a href="https://www.linkedin.com/in/sergei-kobzev-708665332/" target="_blank" class="content__social-item">
                             <img src="assets/img/icons/telegram.svg" alt="Telegram">
                             <span>Telegram</span>
                         </a>
