--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
                 <img class="content__hello-img" src="assets/img/avatar.png" alt="Avatar">
                 <div class="content__hello-text">
                     <span class="content__name">
-                        <a href="/"> Hello, I'm Sergei.</a>
+                        <a href="https://github.com/hellodiogenes"> Hello, I'm Sergei.</a>
                     </span>
                     <span class="content__description">This is my portfolio <br/> with my data related projects</span>
                     <nav class="content__social">
                         </a>
-                        <a href="https://t.me/loki_the_trixter" target="_blank" class="content__social-item">
+                        <a href="https://www.linkedin.com/in/sergei-kobzev-708665332/" target="_blank" class="content__social-item">
                             <img src="assets/img/icons/in.svg" alt="LinkedIn">
                             <span>LinkedIn</span>
                         </a>
-                        <a href="https://www.linkedin.com/in/sergei-kobzev-708665332/" target="_blank" class="content__social-item">
+                        <a href="https://t.me/loki_the_trixter" target="_blank" class="content__social-item">
                             <img src="assets/img/icons/telegram.svg" alt="Telegram">
                             <span>Telegram</span>
+                        </a>
                         </a>
                     </nav>
                 </div>
