--- a/index.html
+++ b/index.html
@@ -23,17 +23,20 @@
                     <span class="content__name">
                         <a href="https://github.com/hellodiogenes"> Hello, I'm Sergei.</a>
                     </span>
-                    <span class="content__description">This is my portfolio <br/> with my data related projects</span>
+                    <span class="content__description">This is my portfolio <br/> with my data related projects!</span>
                     <nav class="content__social">
                         </a>
-                        <a href="https://www.linkedin.com/in/sergei-kobzev-708665332/" target="_blank" class="content__social-item">
-                            <img src="assets/img/icons/in.svg" alt="LinkedIn">
-                            <span>LinkedIn</span>
+                        <a href="https://wa.me/393513275336" target="_blank" class="content__social-item">
+                            <img src="assets/img/icons/whatsapp.svg" alt="Whatsapp">
+                            <span>Whatsapp</span>
                         </a>
                         <a href="https://t.me/loki_the_trixter" target="_blank" class="content__social-item">
                             <img src="assets/img/icons/telegram.svg" alt="Telegram">
                             <span>Telegram</span>
                         </a>
+                        <a href="https://www.linkedin.com/in/sergei-kobzev-708665332/" target="_blank" class="content__social-item">
+                            <img src="assets/img/icons/in.svg" alt="LinkedIn">
+                            <span>LinkedIn</span>
                         </a>
                     </nav>
                 </div>
