--- a/index.html
+++ b/index.html
@@ -44,28 +44,11 @@
             <div class="content__main">
                 <div class="content__main-item">
                     <div class="main-item__description">
-                        <p>This is the main page with examples of the blocks. You can combine them in the way you want.</p>
-                        <p>Check <a href="/example">the example</a> page to see how these blocks could be combined.</p>
+                        <p>I am looking for a job in the data field, specifically interested in data analysis and engineering.</p>
+                        <p>I have been gaining experience in analytics for almost 2 years now. This page contains several projects that can demonstrate my level of proficiency in data tools.</p>
                     </div>
                 </div>
-                <h1 class="content__about-header">Icons</h1>
-                <div class="content__main-item">
-                    <a href="#" class="content__social-item">
-                        <img src="assets/img/icons/discord.svg" alt="discord">
-                        <img src="assets/img/icons/dribbble.svg" alt="dribbble">
-                        <img src="assets/img/icons/facebook.svg" alt="facebook">
-                        <img src="assets/img/icons/github.svg" alt="github">
-                        <img src="assets/img/icons/in.svg" alt="linkedin">
-                        <img src="assets/img/icons/instagram.svg" alt="instagram">
-                        <img src="assets/img/icons/medium.svg" alt="medium">
-                        <img src="assets/img/icons/skype.svg" alt="skype">
-                        <img src="assets/img/icons/telegram.svg" alt="telegram">
-                        <img src="assets/img/icons/twitch.svg" alt="twitch">
-                        <img src="assets/img/icons/twitter.svg" alt="twitter">
-                        <img src="assets/img/icons/vk.svg" alt="vk">
-                        <img src="assets/img/icons/whatsapp.svg" alt="whatsapp">
-                        <img src="assets/img/icons/youtube.svg" alt="youtube">
-                    </a>
+               
                 </div>
                 <h1 class="content__about-header">Blocks</h1>
                 <h2 class="content__subheader">Text</h2>
