--- a/index.html
+++ b/index.html
@@ -45,13 +45,9 @@
                 <div class="content__main-item">
                     <div class="main-item__description">
                         <p>I am looking for a job in the data field, specifically interested in data analysis and engineering.</p>
-                        <p>I have been gaining experience in analytics for almost 2 years now. This page contains several projects that can demonstrate my level of proficiency in data tools.</p>
+                        <p>This page contains several projects that can demonstrate my experience interacting with data, which I have gained over the past 2 years.</p>
                     </div>
                 </div>
-               
-                </div>
-                <h1 class="content__about-header">Blocks</h1>
-                <h2 class="content__subheader">Text</h2>
                 <div class="content__main-item">
                     <div class="main-item__description">
                         <p>I did a huge way to my current point. From my childhood, I've chosen that I will be a developer. Not just developer but Developer. My way is about doing my best. I always try to find out real reasons and try to find the best solution. I'm thinking not only about code and code quality but also about business logic and customer satisfaction.</p>
