--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     </nav>
                 </div>
             </div>
+            <h2 class="content__subheader">Education and working experience</h2>
             <div class="content__main">
                 <div class="content__main-item">
                     <div class="main-item__description">
@@ -50,12 +51,12 @@
                 </div>
                 <div class="content__main-item">
                     <div class="main-item__description">
-                        <p>I did a huge way to my current point. From my childhood, I've chosen that I will be a developer. Not just developer but Developer. My way is about doing my best. I always try to find out real reasons and try to find the best solution. I'm thinking not only about code and code quality but also about business logic and customer satisfaction.</p>
+                        <p>My first steps in data analytics began at RANEPA, where I spent 4 years immersed in political economy analysis. After that, I learned to work on data analytics courses at different courses. At the moment, I am getting a master's degree at the University of Messina in Italy, studying Python, AI, and deep learning.</p>
                     </div>
                 </div>
                 <div class="content__main-item">
                     <div class="main-item__description">
-                        <p>Each client that I has was happy to work with me. Almost every second client comes to me after recommendations. I guess it says a lot.</p>
+                        <p>I had experience working for <a href="https://www.vtb-leasing.ru/">VTB Leasing</a>, one of the largest leasing companies in the CIS. My tasks included analyzing the risk indicators of the auto leasing portfolio and developing projects to reduce business risks. In addition, I worked with social networks of one educational project, monitoring the metrics of audience engagement effectiveness.</p>
                     </div>
                 </div>
                 <h2 class="content__subheader">Projects</h2>
