--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 </div>
                 <div class="content__main-item">
                     <div class="main-item__description">
-                        <p>My first steps in data analytics began at RANEPA, where I spent 4 years immersed in political economy analysis. After that, I learned to work on data analytics courses at different courses. At the moment, I am getting a master's degree at the University of Messina in Italy, studying Python, AI, and deep learning.</p>
+                        <p>My first steps in data analytics began at RANEPA, where I spent 4 years immersed in political economy analysis. After that, I studied thematic courses where I mastered SQL and Python.</p> 
+                        <p>At the moment, I am getting a master's degree at the University of Messina in Italy, studying AI and deep learning.</p>
                     </div>
                 </div>
                 <div class="content__main-item">
