--- a/index.html
+++ b/index.html
@@ -51,15 +51,39 @@
                 </div>
                 <div class="content__main-item">
                     <div class="main-item__description">
-                        <p>My first steps in data analytics began at RANEPA, where I spent 4 years immersed in political economy analysis. After that, I studied thematic courses where I mastered SQL and Python.</p> 
-                        <p>At the moment, I am getting a master's degree at the University of Messina in Italy, studying AI and deep learning.</p>
+                        <p>My first steps in data analytics began at RANEPA, where I spent 4 years immersed in political economy analysis. After that, I studied thematic courses where I mastered SQL and Python. At the moment, I am getting a master's degree at the University of Messina in Italy, studying AI and deep learning.</p>
                     </div>
                 </div>
                 <div class="content__main-item">
                     <div class="main-item__description">
-                        <p>I had experience working for <a href="https://www.vtb-leasing.ru/">VTB Leasing</a>, one of the largest leasing companies in the CIS. My tasks included analyzing the risk indicators of the auto leasing portfolio and developing projects to reduce business risks. In addition, I worked with social networks of one educational project, monitoring the metrics of audience engagement effectiveness.</p>
+                        <p>I had two years of experience working at <a href="https://www.vtb-leasing.ru/">VTB Leasing</a>, one of the largest leasing companies in the CIS. My tasks included analyzing the risk indicators of the auto leasing portfolio and developing projects to reduce business risks. In addition, I worked with social networks of one educational project, monitoring the metrics of audience engagement effectiveness.</p>
                     </div>
                 </div>
+
+                <h2 class="content__subheader">Posts</h2>
+                <div class="content__main-item post">
+                    <article>
+                        <h2 class="main-item__title">
+                            <a href="#linktopost">A simple thought</a>
+                        </h2>
+                        <p class="main-item__date">Nov 22, 2022</p>
+                        <div class="main-item__description">
+                            <p>Thousands of candles can be lighted from a single candle, and the life of the candle will not be shortened. Happiness never decreases by being shared.</p>
+                        </div>
+                    </article>
+                </div>
+                <div class="content__main-item post">
+                    <article>
+                        <h2 class="main-item__title">
+                            <a href="#linktopost">A simple thought 2</a>
+                        </h2>
+                        <p class="main-item__date">Sep 13, 2022</p>
+                        <div class="main-item__description">
+                            <p>Be more concerned with your character than your reputation, because your character is what you really are, while your reputation is merely what others think you are.</p>
+                        </div>
+                    </article>
+                </div>
+
                 <h2 class="content__subheader">Projects</h2>
                 <div class="content__main-item project">
                     <a data-fslightbox href="assets/img/project.png">
@@ -98,34 +122,12 @@
                         </div>
                     </div>
                 </div>
-                <h2 class="content__subheader">Posts</h2>
-                <div class="content__main-item post">
-                    <article>
-                        <h2 class="main-item__title">
-                            <a href="#linktopost">A simple thought</a>
-                        </h2>
-                        <p class="main-item__date">Nov 22, 2022</p>
-                        <div class="main-item__description">
-                            <p>Thousands of candles can be lighted from a single candle, and the life of the candle will not be shortened. Happiness never decreases by being shared.</p>
-                        </div>
-                    </article>
-                </div>
-                <div class="content__main-item post">
-                    <article>
-                        <h2 class="main-item__title">
-                            <a href="#linktopost">A simple thought 2</a>
-                        </h2>
-                        <p class="main-item__date">Sep 13, 2022</p>
-                        <div class="main-item__description">
-                            <p>Be more concerned with your character than your reputation, because your character is what you really are, while your reputation is merely what others think you are.</p>
-                        </div>
-                    </article>
-                </div>
+                
             </div>
         </div>
         <div class="footer">
             <div>
-                <span>© Sviatoslav Zhilichev</span>
+                <span>© Sergei Kobzev</span>
             </div>
             <div>
                 <nav class="footer__social">
