--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                             <img src="assets/img/icons/in.svg" alt="LinkedIn">
                             <span>LinkedIn</span>
                         </a>
+                        <a href="https://github.com/hellodiogenes" target="_blank" class="content__social-item">
+                            <img src="assets/img/icons/github.svg" alt="GitHub">
+                            <span>GitHub</span>
+                        </a>
                     </nav>
                 </div>
             </div>
@@ -60,31 +64,8 @@
                     </div>
                 </div>
 
-                <h2 class="content__subheader">Posts</h2>
-                <div class="content__main-item post">
-                    <article>
-                        <h2 class="main-item__title">
-                            <a href="#linktopost">A simple thought</a>
-                        </h2>
-                        <p class="main-item__date">Nov 22, 2022</p>
-                        <div class="main-item__description">
-                            <p>Thousands of candles can be lighted from a single candle, and the life of the candle will not be shortened. Happiness never decreases by being shared.</p>
-                        </div>
-                    </article>
-                </div>
-                <div class="content__main-item post">
-                    <article>
-                        <h2 class="main-item__title">
-                            <a href="#linktopost">A simple thought 2</a>
-                        </h2>
-                        <p class="main-item__date">Sep 13, 2022</p>
-                        <div class="main-item__description">
-                            <p>Be more concerned with your character than your reputation, because your character is what you really are, while your reputation is merely what others think you are.</p>
-                        </div>
-                    </article>
-                </div>
-
                 <h2 class="content__subheader">Projects</h2>
+
                 <div class="content__main-item project">
                     <a data-fslightbox href="assets/img/project.png">
                         <img src="assets/img/project.png" alt="project1">
@@ -103,6 +84,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="content__main-item project">
                     <a data-fslightbox href="assets/img/project2.png">
                         <img src="assets/img/project2.png" alt="project2">
@@ -122,28 +104,31 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="content__main-item project">
+                    <a data-fslightbox href="assets/img/project.png">
+                        <img src="assets/img/project.png" alt="project1">
+                    </a>
+                    <div>
+                        <div class="main-item__title">
+                            <a href="/example/project.html"><span>Project 1</span></a>
+                        </div>
+                        <div class="main-item__description">
+                            <p>This project is my diamond. I'm very proud of work that I did there.
+                            This customer found me when project was in almost MVP state. But code quality was not good enough, so I rebuild the whole system and made a strong architecture basement</p>
+                        </div>
+                        <div class="main-item__subdescription">
+                            <p><span>Stack:</span> Vue.js, Laravel, Socket.io</p>
+                            <p class="main-item__links"><a href=""><span>Source Code</span></a><span>|</span><a href=""><span>Preview</span></a> </p>
+                        </div>
+                    </div>
+                </div>
                 
             </div>
         </div>
         <div class="footer">
             <div>
                 <span>© Sergei Kobzev</span>
-            </div>
-            <div>
-                <nav class="footer__social">
-                    <a href="#link" target="_blank" class="footer__social-item">
-                        <img src="assets/img/icons/twitter.svg" alt="Twitter">
-                    </a>
-                    <a href="#link" target="_blank" class="footer__social-item">
-                        <img src="assets/img/icons/facebook.svg" alt="Facebook">
-                    </a>
-                    <a href="#link" target="_blank" class="footer__social-item">
-                        <img src="assets/img/icons/in.svg" alt="LinkedIn">
-                    </a>
-                    <a href="#link" target="_blank" class="footer__social-item">
-                        <img src="assets/img/icons/telegram.svg" alt="Telegram">
-                    </a>
-                </nav>
             </div>
         </div>
     </div>
