--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
 
                 <div class="content__main-item project">
                     <a data-fslightbox href="assets/img/project.png">
-                        <img src="assets/img/project.png" alt="project1">
+                        <img src="assets/img/project.png" alt="project3">
                     </a>
                     <div>
                         <div class="main-item__title">
-                            <a href="/example/project.html"><span>Project 1</span></a>
+                            <a href="https://github.com/hellodiogenes/crafts_market_datamart"><span>Project 3</span></a>
                         </div>
                         <div class="main-item__description">
-                            <p>This project is my diamond. I'm very proud of work that I did there.
-                            This customer found me when project was in almost MVP state. But code quality was not good enough, so I rebuild the whole system and made a strong architecture basement</p>
+                            <p>In this project I was diving into the work of data engineers. 
+                                I added a new data source that updates the DWH. After that I developed a DDL to create the data mart and figured out how to update it incrementally.</p>
                         </div>
                         <div class="main-item__subdescription">
-                            <p><span>Stack:</span> Vue.js, Laravel, Socket.io</p>
-                            <p class="main-item__links"><a href=""><span>Source Code</span></a><span>|</span><a href=""><span>Preview</span></a> </p>
+                            <p><span>Stack:</span> PostrgeSQL, DBeaver</p>
+                            <p class="main-item__links"><a href=""><span>Repository in GitHub</span></a></p>
                         </div>
                     </div>
                 </div>
