--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
                     </a>
                     <div>
                         <div class="main-item__title">
-                            <a href="/example/project.html"><span>Project 1</span></a>
+                            <a href="https://github.com/hellodiogenes/AB-test"><span>Project 1</span></a>
                         </div>
                         <div class="main-item__description">
-                            <p>This project is my diamond. I'm very proud of work that I did there.
-                            This customer found me when project was in almost MVP state. But code quality was not good enough, so I rebuild the whole system and made a strong architecture basement</p>
+                            <p>In this project I was diving into the work of data engineers. 
+                                I added a new data source that updates the DWH. After that I developed a DDL to create the data mart and figured out how to update it incrementally.</p>
                         </div>
                         <div class="main-item__subdescription">
-                            <p><span>Stack:</span> Vue.js, Laravel, Socket.io</p>
-                            <p class="main-item__links"><a href=""><span>Source Code</span></a><span>|</span><a href=""><span>Preview</span></a> </p>
+                            <p><span>Stack:</span> PostrgeSQL, DBeaver</p>
+                            <p class="main-item__links"><a href=""><span>Repository in GitHub</span></a></p>
                         </div>
                     </div>
                 </div>
@@ -91,16 +91,15 @@
                     </a>
                     <div>
                         <div class="main-item__title">
-                            <a href="/example/project.html"><span>Project 2</span></a>
+                            <a href="https://github.com/hellodiogenes/retention_function"><span>Project 2</span></a>
                         </div>
                         <div class="main-item__description">
-                            <p>I worked with this project for 1,5 years.
-                                <br/>I've built the whole system from scratch, and now it's fully working project
-                                with a bunch of happy customers</p>
+                            <p>In this project I was diving into the work of data engineers. 
+                                I added a new data source that updates the DWH. After that I developed a DDL to create the data mart and figured out how to update it incrementally.</p>
                         </div>
                         <div class="main-item__subdescription">
-                            <p><span>Stack:</span> Nuxt.js, Laravel</p>
-                            <p class="main-item__links"><a href=""><span>Source Code</span></a><span>|</span><a href=""><span>Preview</span></a> </p>
+                            <p><span>Stack:</span> PostrgeSQL, DBeaver</p>
+                            <p class="main-item__links"><a href=""><span>Repository in GitHub</span></a></p>
                         </div>
                     </div>
                 </div>
