--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                             <a href="https://github.com/hellodiogenes/AB-test"><span>Project 1</span></a>
                         </div>
                         <div class="main-item__description">
-                            <p>In this project I was diving into the work of data engineers. 
-                                I added a new data source that updates the DWH. After that I developed a DDL to create the data mart and figured out how to update it incrementally.</p>
+                            <p>Having data on the profit from mobile game players, I conducted A/B tests to determine which model of distribution of in-game goods is more profitable.
+                                Methods used: Mann–Whitney U test and Bootstrap.</p>
                         </div>
                         <div class="main-item__subdescription">
-                            <p><span>Stack:</span> PostrgeSQL, DBeaver</p>
-                            <p class="main-item__links"><a href=""><span>Repository in GitHub</span></a></p>
+                            <p><span>Stack:</span> Pandas, Numpy, Scipy-stats, Seaborn, Matplotlib</p>
+                            <p class="main-item__links"><a href="https://github.com/hellodiogenes/AB-test"><span>Repository in GitHub</span></a></p>
                         </div>
                     </div>
                 </div>
@@ -94,12 +94,12 @@
                             <a href="https://github.com/hellodiogenes/retention_function"><span>Project 2</span></a>
                         </div>
                         <div class="main-item__description">
-                            <p>In this project I was diving into the work of data engineers. 
-                                I added a new data source that updates the DWH. After that I developed a DDL to create the data mart and figured out how to update it incrementally.</p>
+                            <p>I was tasked with analyzing what percentage of players return to the game after registration. 
+                                To accomplish this, I developed a function that calculates player retention by days relative to their registration date.</p>
                         </div>
                         <div class="main-item__subdescription">
-                            <p><span>Stack:</span> PostrgeSQL, DBeaver</p>
-                            <p class="main-item__links"><a href=""><span>Repository in GitHub</span></a></p>
+                            <p><span>Stack:</span> Pandas, Numpy, Scipy-stats, Seaborn, Matplotlib</p>
+                            <p class="main-item__links"><a href="https://github.com/hellodiogenes/retention_function"><span>Repository in GitHub</span></a></p>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="main-item__subdescription">
                             <p><span>Stack:</span> PostrgeSQL, DBeaver</p>
-                            <p class="main-item__links"><a href=""><span>Repository in GitHub</span></a></p>
+                            <p class="main-item__links"><a href="https://github.com/hellodiogenes/crafts_market_datamart"><span>Repository in GitHub</span></a></p>
                         </div>
                     </div>
                 </div>
