--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
                 <div class="content__main-item project">
                     <a data-fslightbox href="assets/img/project.png">
-                        <img src="assets/img/project.png" alt="project3">
+                        <img src="assets/img/project3.png" alt="project3">
                     </a>
                     <div>
                         <div class="main-item__title">
